# fft

./: CMakeLists.txt  Makefile  Makefile.gpu  Makefile.gpu1  Makefile.osx  sirius.h  test_fft_correctness_1.cpp
SDDK/: communicator.hpp  fft3d.hpp  gvec.hpp  linalg.hpp  matrix_storage.hpp  sddk.hpp  test  wave_functions.hpp  wf_ortho.hpp
SDDK/GPU/: acc.hpp  cufft.hpp  fft_device.hpp  fft_kernels.cpp  fft_kernels.cu  rocfft_interface.cpp  rocfft_interface.hpp
cmake/modules/: FindFFTW.cmake  FindROCM.cmake  FindScalapack.cmake
utils/: a.cpp  a.out
